welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:6: error: illegal start of simple pattern
  for (int i =9 && i<9){
             ^arrayCount9:12: error: '<-' expected but '}' found.
} 
^